platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_85.platter
piece of a; 
sip of b = ((3+5*2) and ) 5>10);
table of a = [
  piece of x;
];
start(){} 
}